@@ -1,6 +1,9 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
 2014-04-06 mmichaud <m.michael.michaud@orange.fr>
+  * Fix #88 replace vertex size slider by a logarithmic slider
+
+2014-04-06 mmichaud <m.michael.michaud@orange.fr>
   * Fix bug #320 : mouse drag in the layerNamePanel could sometimes
     break the application (inconsistency between layerManager, categories
     and layerName panel).
